[workspace]
resolver = "2"
members = [
    "blockchain/blockchain-core",
    "blockchain/consensus", 
    "blockchain/crypto",
    "storage/scylla-adapter",
    "storage/storage-traits",
    "validation/on-chain-validator",
    "validation/off-chain-validator", 
    "validation/validation-core",
    "relayer/relayer-server",
    "relayer/relayer-api",
    "relayer/gateway-service",
    "p2p/p2p-network",
    "p2p/rpc-server",
    "frontend/dioxus-admin",
    "tools/cli-tools",
    "tools/dev-tools"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Tomas Wallick <wallick.tom@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/isgo-golgo13/p2p-blockchain-relayer-service-rs"
homepage = "https://github.com/isgo-golgo13/p2p-blockchain-relayer-service-rs"
description = "Production-grade blockchain system with off-chain validation and relayer architecture"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = { version = "0.28", features = ["rand-std", "recovery"] }
ring = "0.17"
ed25519-dalek = "2.0"

# Database
scylla = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Networking
libp2p = "0.53"
quinn = "0.10"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }

# Web framework
dioxus = "0.4"
dioxus-web = "0.4"
dioxus-router = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
once_cell = "1.19"
parking_lot = "0.12"

# Testing
mockall = "0.12"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
split-debuginfo = "unpacked"